cabal-version:      2.4
name:               lambda-repl
version:            0.0.0.1
synopsis:           An interactive interpreter for the lambda calculus
author:             aattoa
maintainer:         126791757+aattoa@users.noreply.github.com

extra-source-files:
    README.md

executable lambda-repl
    main-is:            Main.hs
    hs-source-dirs:     src
    other-modules:      ParserCombinators, Syntax, Parse, DeBruijn
    build-depends:      base ^>=4.17.2.0, haskeline
    default-language:   Haskell2010
    default-extensions:
        BlockArguments,
        InstanceSigs,
        LambdaCase
